# LLM

./: .env  .env_sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_1df033120bbcc412___init___py.html  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_2484c951eaf88dd9_0001_initial_py.html  z_2484c951eaf88dd9_0002_course_owner_lesson_owner_py.html  z_2484c951eaf88dd9___init___py.html  z_8b562f3fe71efc7d___init___py.html  z_f6c68bdc9becfc1e___init___py.html  z_f6c68bdc9becfc1e_admin_py.html  z_f6c68bdc9becfc1e_apps_py.html  z_f6c68bdc9becfc1e_managers_py.html  z_f6c68bdc9becfc1e_models_py.html  z_f6c68bdc9becfc1e_permissions_py.html  z_f6c68bdc9becfc1e_serializers_py.html  z_f6c68bdc9becfc1e_tests_py.html  z_f6c68bdc9becfc1e_urls_py.html  z_f6c68bdc9becfc1e_views_py.html  z_f978324627c06562___init___py.html  z_f978324627c06562_admin_py.html  z_f978324627c06562_apps_py.html  z_f978324627c06562_models_py.html  z_f978324627c06562_paginators_py.html  z_f978324627c06562_serializers_py.html  z_f978324627c06562_tests_py.html  z_f978324627c06562_urls_py.html  z_f978324627c06562_validators_py.html  z_f978324627c06562_views_py.html  z_fff39e3ca0aaeed4_0001_initial_py.html  z_fff39e3ca0aaeed4_0002_payments_py.html  z_fff39e3ca0aaeed4_0003_subscription_py.html  z_fff39e3ca0aaeed4___init___py.html
materials/: models.py  paginators.py  permissions.py  serializer.py  serializers.py  (+4 more)
(+22 files in other folders)
