[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.2.2"
pillow = "^12.1.1"
black = "^26.3.1"
django = "^6.0.3"
djangorestframework = "^3.17.0"
django-filter = "^25.2"
isort = "^8.0.1"
flake8 = "^7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
